--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Cole Shirley",
-            "email": "cole.shirley@artificertech.com",
-            "role": "Developer"
-        },
-        {
             "name": "iotronlab",
-            "email": "support@iotronlab.com",
+            "email": "contactus@iotron.co",
             "role": "Developer"
         },
         {
