--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -31,14 +31,16 @@ jobs:
       run: |
           composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" "filament/support" --no-interaction --no-update
           composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-    - name: Create Database
-      run: |
-        mkdir -p database
-        touch database/database.sqlite
+    # - name: Generate key
+    #   run: php artisan key:generate
+    # - name: Directory Permissions
+    #   run: chmod -R 777 storage bootstrap/cache
+    # - name: Create Database
+    #   run: |
+    #     mkdir -p database
+    #     touch database/database.sqlite
     - name: Execute tests (Unit and Feature tests) via PHPUnit
-      env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
+      # env:
+      #   DB_CONNECTION: sqlite
+      #   DB_DATABASE: database/database.sqlite
       run: vendor/bin/phpunit
