--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -43,4 +43,4 @@ jobs:
       # env:
       #   DB_CONNECTION: sqlite
       #   DB_DATABASE: database/database.sqlite
-      run: vendor/bin/phpunit
+      run: vendor/bin/pest
