--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -31,8 +31,10 @@ jobs:
       run: |
           composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" "filament/support" --no-interaction --no-update
           composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
-    # - name: Generate key
-    #   run: php artisan key:generate
+    - name: Prepare Laravel Application
+      run: |
+        cp .env.ci .env
+        php artisan key:generate
     # - name: Directory Permissions
     #   run: chmod -R 777 storage bootstrap/cache
     # - name: Create Database
