--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         php: ['8.0']
         laravel: [9.*]
-        dependency-version: [prefer-stable]
+        dependency-version: [prefer-lowest, prefer-stable]
         include:
           - laravel: 9.*
             testbench: 7.*
@@ -33,7 +33,7 @@ jobs:
           composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
     - name: Prepare Laravel Application
       run: |
-        cp .env.ci .env
+        cp .env.example .env
         php artisan key:generate
     # - name: Directory Permissions
     #   run: chmod -R 777 storage bootstrap/cache
