--- a/composer.json
+++ b/composer.json
@@ -24,18 +24,18 @@
         }
     ],
     "require": {
-        "php": "^8.0|^8.1",
-        "filament/filament": "^2.15.16|^2.16",
-        "illuminate/contracts": "^9.0|^10.0",
-        "spatie/laravel-package-tools": "^1.13.0|^1.14.0"
+        "php": "^8.0",
+        "filament/filament": "^2.15.16",
+        "illuminate/contracts": "^9.0",
+        "spatie/laravel-package-tools": "^1.13.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
-        "nunomaduro/collision": "^6.0|^7.9",
+        "nunomaduro/collision": "^6.0",
         "nunomaduro/larastan": "^2.0.1",
-        "orchestra/testbench": "^7.0|^8.0",
-        "pestphp/pest": "^1.21|^2.0",
-        "pestphp/pest-plugin-laravel": "^1.1|^2.0",
+        "orchestra/testbench": "^7.0",
+        "pestphp/pest": "^1.21",
+        "pestphp/pest-plugin-laravel": "^1.1",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
