upgraded support for laravel 10

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -36,4 +36,8 @@
     <logging>
         <junit outputFile="build/report.junit.xml"/>
     </logging>
+    <php>
+        <server name="APP_ENV" value="testing"/>
+        <server name="APP_KEY" value="base64:mzbSFUMpeU2GO9Td424wgNeHGClZqkYVOx5GKKiS9uc="/>
+    </php>
 </phpunit>
